--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>2.7.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com</groupId>
-    <artifactId>imcApi</artifactId>
+    <groupId>com.paulofranklins</groupId>
+    <artifactId>bmi-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>imcApi</name>
     <description>IMC project API</description>
